# conference-2026-csun

./: .env  .env.example  .gitignore  CLAUDE.md  Makefile  main.py  mkdocs.yml  pyproject.toml
data/processed/: analysis_2026.json  analysis_multi_year.json  conference_report_2026.md  knowledge_graph_putz.json  knowledge_graph_report.md  topic_taxonomy.json
data/processed/exhibitors_2024/: exhibitor_summary.json  exhibitors.csv
data/processed/sessions/: sessions.csv  summary.json  topic_cooccurrence.csv  topic_trends.csv
data/processed/sessions_2024/: sessions.csv  summary.json  topic_cooccurrence.csv  topic_trends.csv
data/processed/sessions_multi_year/: sessions.csv  summary.json  topic_cooccurrence.csv  topic_trends.csv
data/processed/speakers_2026/: speaker_summary.json  speakers.csv
data/raw/: exhibitors_2024.json  sessions_2023.json  sessions_2024.json  sessions_2025.json  sessions_2026.json  speakers_2025.json  speakers_2026.json  speakers_2026_full.json  sponsorship_2026.json
docs/: conference-growth.md  index.md  methodology.md
docs/knowledge-graph/: index.md
docs/organizations/: index.md  trends.md
docs/speakers/: continuity.md  index.md
docs/topics/: ai-ml.md  index.md  trends.md
src/csun_analytics/: __init__.py  cli.py  data.py  docs_builder.py
src/csun_analytics/analysis/: __init__.py  comprehensive.py  exhibitors.py  graph_builder.py  knowledge_graph.py  normalize.py  sessions.py  speakers.py
src/csun_analytics/dashboard/: app.py
src/csun_analytics/models/: __init__.py  exhibitor.py  session.py  (+1 more)
tests/: test_models.py
(+23 files in other folders)
